include/maplibre_native_c/map.h


typedef struct mln_map_options {
  uint32_t size;
  uint32_t width;
  uint32_t height;
  double scale_factor;
  uint32_t map_mode;
  bool fast_pfor_enabled;
} mln_map_options;
typedef struct mln_edge_insets {
  double top;
  double left;
  double bottom;
  double right;
} mln_edge_insets;
typedef struct mln_lat_lng {
  double latitude;
  double longitude;
} mln_lat_lng;
typedef struct mln_string_view {
  const char* data;
  size_t size;
} mln_string_view;
typedef struct mln_geometry mln_geometry;
typedef struct mln_coordinate_span {
  const mln_lat_lng* coordinates;
  size_t coordinate_count;
} mln_coordinate_span;
typedef struct mln_polygon_geometry {
  const mln_coordinate_span* rings;
  size_t ring_count;
} mln_polygon_geometry;
typedef struct mln_multi_line_geometry {
  const mln_coordinate_span* lines;
  size_t line_count;
} mln_multi_line_geometry;
typedef struct mln_multi_polygon_geometry {
  const mln_polygon_geometry* polygons;
  size_t polygon_count;
} mln_multi_polygon_geometry;
typedef struct mln_geometry_collection {
  const mln_geometry* geometries;
  size_t geometry_count;
} mln_geometry_collection;
typedef struct mln_geometry {
  uint32_t size;
  uint32_t type;
  union {
    mln_lat_lng point;
    mln_coordinate_span line_string;
    mln_polygon_geometry polygon;
    mln_coordinate_span multi_point;
    mln_multi_line_geometry multi_line_string;
    mln_multi_polygon_geometry multi_polygon;
    mln_geometry_collection geometry_collection;
  } data;
} mln_geometry;
typedef struct mln_json_member {
  mln_string_view key;
  const mln_json_value* value;
} mln_json_member;
typedef struct mln_feature {
  uint32_t size;
  const mln_geometry* geometry;
  const mln_json_member* properties;
  size_t property_count;
  uint32_t identifier_type;
  union {
    uint64_t uint_value;
    int64_t int_value;
    double double_value;
    mln_string_view string_value;
  } identifier;
} mln_feature;
typedef enum mln_geojson_type : uint32_t {
  MLN_GEOJSON_TYPE_GEOMETRY = 1,
  MLN_GEOJSON_TYPE_FEATURE = 2,
  MLN_GEOJSON_TYPE_FEATURE_COLLECTION = 3,
} mln_geojson_type;
typedef struct mln_feature_collection {
  const mln_feature* features;
  size_t feature_count;
} mln_feature_collection;
typedef struct mln_geojson {
  uint32_t size;
  uint32_t type;
  union {
    const mln_geometry* geometry;
    const mln_feature* feature;
    mln_feature_collection feature_collection;
  } data;
} mln_geojson;
typedef struct mln_lat_lng_bounds {
  mln_lat_lng southwest;
  mln_lat_lng northeast;
} mln_lat_lng_bounds;
typedef struct mln_bound_options {
  uint32_t size;
  uint32_t fields;
  mln_lat_lng_bounds bounds;
  double min_zoom;
  double max_zoom;
  double min_pitch;
  double max_pitch;
} mln_bound_options;
typedef struct mln_offline_tile_pyramid_region_definition {
  uint32_t size;
  const char* style_url;
  mln_lat_lng_bounds bounds;
  double min_zoom;
  double max_zoom;
  float pixel_ratio;
  bool include_ideographs;
} mln_offline_tile_pyramid_region_definition;
typedef struct mln_offline_geometry_region_definition {
  uint32_t size;
  const char* style_url;
  const mln_geometry* geometry;
  double min_zoom;
  double max_zoom;
  float pixel_ratio;
  bool include_ideographs;
} mln_offline_geometry_region_definition;
typedef struct mln_offline_region_definition {
  uint32_t size;
  uint32_t type;
  union {
    mln_offline_tile_pyramid_region_definition tile_pyramid;
    mln_offline_geometry_region_definition geometry;
  } data;
} mln_offline_region_definition;
typedef struct mln_offline_region_info {
  uint32_t size;
  mln_offline_region_id id;
  mln_offline_region_definition definition;
  const uint8_t* metadata;
  size_t metadata_size;
} mln_offline_region_info;
MLN_API mln_status mln_runtime_offline_region_create_start(
  mln_runtime runtime, const mln_offline_region_definition* definition,
  const uint8_t* metadata, size_t metadata_size,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get_start(
  mln_runtime runtime, mln_offline_region_id region_id,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_list_start(
  mln_runtime runtime, mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_merge_database_start(
  mln_runtime runtime, const char* side_database_path,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_update_metadata_start(
  mln_runtime runtime, mln_offline_region_id region_id, const uint8_t* metadata,
  size_t metadata_size, mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get_status_start(
  mln_runtime runtime, mln_offline_region_id region_id,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_set_observed_start(
  mln_runtime runtime, mln_offline_region_id region_id, bool observed,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_set_download_state_start(
  mln_runtime runtime, mln_offline_region_id region_id, uint32_t state,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_invalidate_start(
  mln_runtime runtime, mln_offline_region_id region_id,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_delete_start(
  mln_runtime runtime, mln_offline_region_id region_id,
  mln_offline_operation_id* out_operation_id
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_create_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_snapshot* out_region
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_snapshot* out_region, bool* out_found
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_list_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_list* out_regions
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_merge_database_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_list* out_regions
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_update_metadata_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_snapshot* out_region
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get_status_take_result(
  mln_runtime runtime, mln_offline_operation_id operation_id,
  mln_offline_region_status* out_status
) MLN_NOEXCEPT;
MLN_API mln_status mln_offline_region_snapshot_get(
  mln_offline_region_snapshot snapshot, mln_offline_region_info* out_info
) MLN_NOEXCEPT;
MLN_API void mln_offline_region_snapshot_destroy(
  mln_offline_region_snapshot snapshot
) MLN_NOEXCEPT;
MLN_API mln_status mln_offline_region_list_count(
  mln_offline_region_list list, size_t* out_count
) MLN_NOEXCEPT;
MLN_API mln_status mln_offline_region_list_get(
  mln_offline_region_list list, size_t index, mln_offline_region_info* out_info
) MLN_NOEXCEPT;
MLN_API void mln_offline_region_list_destroy(
  mln_offline_region_list list
) MLN_NOEXCEPT;
typedef struct mln_projected_meters {
  double northing;
  double easting;
} mln_projected_meters;
typedef struct mln_projection_mode {
  uint32_t size;
  uint32_t fields;
  bool axonometric;
  double x_skew;
  double y_skew;
} mln_projection_mode;
typedef struct mln_map_viewport_options {
  uint32_t size;
  uint32_t fields;
  uint32_t north_orientation;
  uint32_t constrain_mode;
  uint32_t viewport_mode;
  mln_edge_insets frustum_offset;
} mln_map_viewport_options;
typedef struct mln_map_tile_options {
  uint32_t size;
  uint32_t fields;
  uint32_t prefetch_zoom_delta;
  double lod_min_radius;
  double lod_scale;
  double lod_pitch_threshold;
  double lod_zoom_shift;
  uint32_t lod_mode;
} mln_map_tile_options;
MLN_API mln_map_options mln_map_options_default(void) MLN_NOEXCEPT;