bindings/dotnet/src/Maplibre.Native/Generated/map.g.cs


      [FieldOffset(0)]
      [NativeTypeName("int64_t")]
      public long int_value;

      [FieldOffset(0)]
      public double double_value;

      [FieldOffset(0)]
      public mln_string_view string_value;
    }
  }

  [NativeTypeName("uint32_t")]
  internal enum mln_geojson_type : uint
  {
    MLN_GEOJSON_TYPE_GEOMETRY = 1,
    MLN_GEOJSON_TYPE_FEATURE = 2,
    MLN_GEOJSON_TYPE_FEATURE_COLLECTION = 3,
  }

  internal unsafe partial struct mln_feature_collection
  {
    [NativeTypeName("const mln_feature *")]
    public mln_feature* features;

    [NativeTypeName("size_t")]
    public nuint feature_count;
  }

  internal partial struct mln_geojson
  {
    [NativeTypeName("uint32_t")]
    public uint size;

    [NativeTypeName("uint32_t")]
    public uint type;

    [NativeTypeName("__AnonymousRecord_map_L459_C3")]
    public _data_e__Union data;

    [StructLayout(LayoutKind.Explicit)]
    internal unsafe partial struct _data_e__Union
    {
      [FieldOffset(0)]
      [NativeTypeName("const mln_geometry *")]
      public mln_geometry* geometry;

      [FieldOffset(0)]
      [NativeTypeName("const mln_feature *")]
      public mln_feature* feature;

      [FieldOffset(0)]
      public mln_feature_collection feature_collection;
    }
  }

  internal partial struct mln_lat_lng_bounds
  {
    public mln_lat_lng southwest;

    public mln_lat_lng northeast;
  }

  internal partial struct mln_bound_options
  {
    [NativeTypeName("uint32_t")]
    public uint size;

    [NativeTypeName("uint32_t")]
    public uint fields;

    public mln_lat_lng_bounds bounds;

    public double min_zoom;

    public double max_zoom;

    public double min_pitch;

    public double max_pitch;
  }

  internal unsafe partial struct mln_offline_tile_pyramid_region_definition
  {
    [NativeTypeName("uint32_t")]
    public uint size;

    [NativeTypeName("const char *")]
    public sbyte* style_url;

    public mln_lat_lng_bounds bounds;

    public double min_zoom;

    public double max_zoom;

    public float pixel_ratio;

    [NativeTypeName("bool")]
    public byte include_ideographs;
  }

  internal unsafe partial struct mln_offline_geometry_region_definition
  {
    [NativeTypeName("uint32_t")]
    public uint size;

    [NativeTypeName("const char *")]
    public sbyte* style_url;

    [NativeTypeName("const mln_geometry *")]
    public mln_geometry* geometry;

    public double min_zoom;

    public double max_zoom;

    public float pixel_ratio;

    [NativeTypeName("bool")]
    public byte include_ideographs;
  }

  internal partial struct mln_offline_region_definition
  {
    [NativeTypeName("uint32_t")]
    public uint size;

    [NativeTypeName("uint32_t")]
    public uint type;

    [NativeTypeName("__AnonymousRecord_map_L529_C3")]
    public _data_e__Union data;

    [StructLayout(LayoutKind.Explicit)]
    internal partial struct _data_e__Union
    {
      [FieldOffset(0)]
      public mln_offline_tile_pyramid_region_definition tile_pyramid;

      [FieldOffset(0)]
      public mln_offline_geometry_region_definition geometry;
    }
  }

  internal unsafe partial struct mln_offline_region_info
  {
    [NativeTypeName("uint32_t")]
    public uint size;

    [NativeTypeName("mln_offline_region_id")]
    public long id;

    public mln_offline_region_definition definition;

    [NativeTypeName("const uint8_t *")]
    public byte* metadata;

    [NativeTypeName("size_t")]
    public nuint metadata_size;
  }

  internal partial struct mln_projected_meters
  {
    public double northing;

    public double easting;
  }

  internal partial struct mln_projection_mode
  {
    [NativeTypeName("uint32_t")]
    public uint size;

    [NativeTypeName("uint32_t")]
    public uint fields;

    [NativeTypeName("bool")]
    public byte axonometric;

    public double x_skew;

    public double y_skew;
  }

  internal partial struct mln_map_viewport_options
  {
    [NativeTypeName("uint32_t")]
    public uint size;

    [NativeTypeName("uint32_t")]
    public uint fields;

    [NativeTypeName("uint32_t")]
    public uint north_orientation;

    [NativeTypeName("uint32_t")]
    public uint constrain_mode;

    [NativeTypeName("uint32_t")]
    public uint viewport_mode;

    public mln_edge_insets frustum_offset;
  }

  internal partial struct mln_map_tile_options
  {
    [NativeTypeName("uint32_t")]
    public uint size;

    [NativeTypeName("uint32_t")]
    public uint fields;

    [NativeTypeName("uint32_t")]
    public uint prefetch_zoom_delta;

    public double lod_min_radius;

    public double lod_scale;

    public double lod_pitch_threshold;

    public double lod_zoom_shift;

    [NativeTypeName("uint32_t")]
    public uint lod_mode;
  }

  internal static unsafe partial class NativeMethods
  {
    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_region_create_start(mln_runtime* runtime, [NativeTypeName("const mln_offline_region_definition *")] mln_offline_region_definition* definition, [NativeTypeName("const uint8_t *")] byte* metadata, [NativeTypeName("size_t")] nuint metadata_size, [NativeTypeName("mln_offline_operation_id *")] ulong* out_operation_id);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_region_get_start(mln_runtime* runtime, [NativeTypeName("mln_offline_region_id")] long region_id, [NativeTypeName("mln_offline_operation_id *")] ulong* out_operation_id);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_regions_list_start(mln_runtime* runtime, [NativeTypeName("mln_offline_operation_id *")] ulong* out_operation_id);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_regions_merge_database_start(mln_runtime* runtime, [NativeTypeName("const char *")] sbyte* side_database_path, [NativeTypeName("mln_offline_operation_id *")] ulong* out_operation_id);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_region_update_metadata_start(mln_runtime* runtime, [NativeTypeName("mln_offline_region_id")] long region_id, [NativeTypeName("const uint8_t *")] byte* metadata, [NativeTypeName("size_t")] nuint metadata_size, [NativeTypeName("mln_offline_operation_id *")] ulong* out_operation_id);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_region_get_status_start(mln_runtime* runtime, [NativeTypeName("mln_offline_region_id")] long region_id, [NativeTypeName("mln_offline_operation_id *")] ulong* out_operation_id);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_region_set_observed_start(mln_runtime* runtime, [NativeTypeName("mln_offline_region_id")] long region_id, [NativeTypeName("bool")] byte observed, [NativeTypeName("mln_offline_operation_id *")] ulong* out_operation_id);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_region_set_download_state_start(mln_runtime* runtime, [NativeTypeName("mln_offline_region_id")] long region_id, [NativeTypeName("uint32_t")] uint state, [NativeTypeName("mln_offline_operation_id *")] ulong* out_operation_id);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_region_invalidate_start(mln_runtime* runtime, [NativeTypeName("mln_offline_region_id")] long region_id, [NativeTypeName("mln_offline_operation_id *")] ulong* out_operation_id);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_region_delete_start(mln_runtime* runtime, [NativeTypeName("mln_offline_region_id")] long region_id, [NativeTypeName("mln_offline_operation_id *")] ulong* out_operation_id);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_region_create_take_result(mln_runtime* runtime, [NativeTypeName("mln_offline_operation_id")] ulong operation_id, mln_offline_region_snapshot** out_region);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_region_get_take_result(mln_runtime* runtime, [NativeTypeName("mln_offline_operation_id")] ulong operation_id, mln_offline_region_snapshot** out_region, bool* out_found);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_regions_list_take_result(mln_runtime* runtime, [NativeTypeName("mln_offline_operation_id")] ulong operation_id, mln_offline_region_list** out_regions);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_regions_merge_database_take_result(mln_runtime* runtime, [NativeTypeName("mln_offline_operation_id")] ulong operation_id, mln_offline_region_list** out_regions);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_region_update_metadata_take_result(mln_runtime* runtime, [NativeTypeName("mln_offline_operation_id")] ulong operation_id, mln_offline_region_snapshot** out_region);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_runtime_offline_region_get_status_take_result(mln_runtime* runtime, [NativeTypeName("mln_offline_operation_id")] ulong operation_id, mln_offline_region_status* out_status);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_offline_region_snapshot_get([NativeTypeName("const mln_offline_region_snapshot *")] mln_offline_region_snapshot* snapshot, mln_offline_region_info* out_info);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void mln_offline_region_snapshot_destroy(mln_offline_region_snapshot* snapshot);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_offline_region_list_count([NativeTypeName("const mln_offline_region_list *")] mln_offline_region_list* list, [NativeTypeName("size_t *")] nuint* out_count);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_status mln_offline_region_list_get([NativeTypeName("const mln_offline_region_list *")] mln_offline_region_list* list, [NativeTypeName("size_t")] nuint index, mln_offline_region_info* out_info);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void mln_offline_region_list_destroy(mln_offline_region_list* list);

    [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern mln_map_options mln_map_options_default();
